--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
             "App\\": "App/"
         },
         "files": [
-            "App/Utils/Logger.php"
+            "App/Utils/Logger.php",
+            "App/Utils/ShowAlertConsole.php"
         ]
     },
     "authors": [
@@ -14,5 +15,7 @@
             "email": "douglas5422@outlook.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
